--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <p>the dubki king</p>
     <b>Raid machine</b>
+    <img src="C:\Users\hp5cd\Downloads\vk.jpg">
+    <img src="C:\Users\hp5cd\Downloads\cap.avif">
     
 </body>
 </html>
