--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
     <p>the dubki king</p>
     <b>Raid machine</b>
+    <li>virat</li>
     <img src="C:\Users\hp5cd\Downloads\vk.jpg">
+    <li>Captain america</li>
     <img src="C:\Users\hp5cd\Downloads\cap.avif">
     
 </body>
