--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <img src="C:\Users\hp5cd\Downloads\vk.jpg">
     <li>Captain america</li>
     <img src="C:\Users\hp5cd\Downloads\cap.avif">
+    <a href="login.html">Enter</a>
+    <a href="signup.html">Enter</a>
+
     
 </body>
 </html>
